Small demo fixes

--- a/demo/vaadin-router-navigation-trigger-demos.html
+++ b/demo/vaadin-router-navigation-trigger-demos.html
@@ -35,7 +35,7 @@
       Please note that you must dispatch the <code>popstate</code> event manually after
       you invoke either <code>window.history.pushState</code> or <code>window.history.replaceState</code>.
       Those methods do not do that by themselves and only alter the <code>history</code> object.
-      This is an "undo" feature for single page applications.
+      This is an "undo" feature for single page applications.</p>
     <vaadin-demo-snippet id="vaadin-router-navigation-trigger-demo-1" iframe-src="iframe.html">
       <template preserve-content>
         <div id="outlet"></div>
@@ -65,7 +65,6 @@
       navigation events for <code>Vaadin.Router</code> if they refer to a
       location within the app. That allows using regular <code>&lt;a&gt;</code>
       link elements for in-app navigation.</p>
-    </p>
     <vaadin-demo-snippet id="vaadin-router-navigation-trigger-demo-2" iframe-src="iframe.html">
       <template preserve-content>
         <a href="/">Home</a>
@@ -128,7 +127,7 @@
       to navigation events in its constructor. Use the
       <code>unsubscribe()</code> method to cancel this automatic subscription
       and the <code>subscribe()</code> method to re-subscribe.</p>
-    <vaadin-demo-snippet id="vaadin-router-navigation-trigger-demo-3" iframe-src="iframe.html">
+    <vaadin-demo-snippet id="vaadin-router-navigation-trigger-demo-4" iframe-src="iframe.html">
       <template preserve-content>
         <div id="outlet"></div>
         <script type="module">
