Check that no script is added on error.

--- a/test/router.spec.html
+++ b/test/router.spec.html
@@ -560,6 +560,7 @@
               exceptionThrown = true;
             }
             expect(exceptionThrown).to.equal(true);
+            expect(document.head.querySelectorAll('script[src="' + nonExistingPath + '"][async]').length).to.equal(0);
           });
         });
       });
