--- a/demo/demo-elements/component-definition.html
+++ b/demo/demo-elements/component-definition.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../components/polymer/polymer-element.html">
+<link rel="import" href="../../../polymer/polymer-element.html">
 
 <dom-module id="x-bundle-custom-test">
   <template>
