fix the 'should use the CLICK navigation trigger by default' test in IE11
With ShadyDOM link.click() does not always work as expected for the elements inside the ShadyDOM. It's easier to move the link outside of the ShadyDOM than to emulate the click in a ShadyDOM-compliant way.

--- a/test/router.spec.html
+++ b/test/router.spec.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <a id="admin-anchor" href="/admin"></a>
   <test-fixture id="outlet">
     <template>
       <div></div>
@@ -447,9 +448,7 @@
           });
 
           it('should use the CLICK navigation trigger by default', async() => {
-            const link = document.createElement('a');
-            link.setAttribute('href', '/admin');
-            outlet.children[0].appendChild(link);
+            const link = document.getElementById('admin-anchor');
             link.click();
             await router.ready;
             expect(outlet.children).to.have.lengthOf(1);
