Fix route parameters demo element

--- a/demo/demo-elements/x-image-view.html
+++ b/demo/demo-elements/x-image-view.html
@@ -6,7 +6,7 @@
       }
     </style>
 
-    <div style$="height: [[route.params.0]]px; width: [[route.params.0]]px; background: [[route.params.color]];"></div>
+    <div style$="height: [[route.params.size]]px; width: [[route.params.size]]px; background: [[route.params.color]];"></div>
   </template>
   <script>
     class XImageView extends Polymer.Element {
