--- a/demo/vaadin-router-navigation-trigger-demos.html
+++ b/demo/vaadin-router-navigation-trigger-demos.html
@@ -130,6 +130,8 @@
       and the <code>subscribe()</code> method to re-subscribe.</p>
     <vaadin-demo-snippet id="vaadin-router-navigation-trigger-demo-4" iframe-src="iframe.html">
       <template preserve-content>
+        <a href="/">Home</a>
+        <a href="/users">Users</a>
         <div id="outlet"></div>
         <script type="module">
           // import {Router} from '@vaadin/router';
