--- a/demo/demo-elements/x-user-list.html
+++ b/demo/demo-elements/x-user-list.html
@@ -10,9 +10,9 @@
 
     <h1>Users</h1>
     <ul>
-      <li>Kim</li>
-      <li>Jane</li>
-      <li>Sam</li>
+      <li><a href="/users/kim">Kim</a></li>
+      <li><a href="/users/jane">Jane</a></li>
+      <li><a href="/users/sam">Sam</a></li>
     </ul>
   </template>
   <script>
