--- a/demo/vaadin-router-route-actions-demos.html
+++ b/demo/vaadin-router-route-actions-demos.html
@@ -18,7 +18,7 @@
     <vaadin-demo-snippet id="vaadin-router-route-actions-demo-1" iframe-src="iframe.html">
       <template preserve-content>
         <nav>
-          <a href="/">Root</a>
+          <a href="/">Home</a>
           <a href="/users">All Users</a>
           <a href="/users/kim">Kim</a>
         </nav>
@@ -63,7 +63,7 @@
     <vaadin-demo-snippet id="vaadin-router-route-actions-demo-2" iframe-src="iframe.html">
       <template preserve-content>
         <nav>
-          <a href="/">Root (no delay on open)</a>
+          <a href="/">Home (no delay on open)</a>
           <a href="/users">All Users (slight delay on open)</a>
           <a href="/users/kim">Kim (slight delay on open)</a>
         </nav>
