fix a link in the "Ambiguous Match" demo
the link was pointing to a non-existing route `/users/kim` (fixed to point to `/kim`)

--- a/demo/vaadin-router-basic-demos.html
+++ b/demo/vaadin-router-basic-demos.html
@@ -90,7 +90,7 @@
       <template preserve-content>
         <a href="/">Home</a>
         <a href="/users">All Users</a>
-        <a href="/users/kim">Kim</a>
+        <a href="/kim">Kim</a>
         <div id="outlet"></div>
         <script type="module">
           // import {Router} from '@vaadin/router';
