--- a/demo/vaadin-router-lazy-loading-demos.html
+++ b/demo/vaadin-router-lazy-loading-demos.html
@@ -21,7 +21,7 @@
     </p>
     <p>
       This demo shows how to load the <code>component-definition.js</code>
-      script which defines the custom element for the <code>/lasy</code> route.
+      script which defines the custom element for the <code>/lazy</code> route.
       Check the network tab in the browser DevTools to see that the script is
       loaded only after clickig at the <code>/lazy</code> route link.
     </p>
