--- a/demo/vaadin-router-navigation-trigger-demos.html
+++ b/demo/vaadin-router-navigation-trigger-demos.html
@@ -46,7 +46,7 @@
       <code>window.history.replaceState()</code> methods, you need to dispatch
       the <code>popstate</code> event manually&mdash;these methods do not do
       that by themselves (see <a href="https://developer.mozilla.org/en-US/docs/Web/API/History_API"
-      target="_blank">MDN</a> for details).
+      target="_blank" rel="noopener">MDN</a> for details).
     </p>
     <vaadin-demo-snippet id="vaadin-router-navigation-trigger-demo-1" iframe-src="iframe.html">
       <template preserve-content>
@@ -148,8 +148,8 @@
     <h3>Unsubscribe from Navigation Events</h3>
     <p>
       Each Vaadin.Router instance is automatically subscribed to navigation
-      events upon creation. Sometimes it might be necessary to canel this
-      subscription so that the router would re-render only in response to
+      events upon creation. Sometimes it might be necessary to cacnel this
+      subscription so that the router would re-render only in response to the
       explicit <code>render()</code> method calls. Use the <code>unsubscribe()
       </code> method to cancel this automatic subscription and the <code>
       subscribe()</code> method to re-subscribe.
