--- a/demo/vaadin-router-lazy-loading-demos.html
+++ b/demo/vaadin-router-lazy-loading-demos.html
@@ -21,7 +21,7 @@
     </p>
     <p>
       This demo shows how to load the <code>component-definition.js</code>
-      script which defines the custom element for the <code>/lasy</code> route.
+      script which defines the custom element for the <code>/lazy</code> route.
       Check the network tab in the browser DevTools to see that the script is
       loaded only after clickig at the <code>/lazy</code> route link.
     </p>
@@ -49,11 +49,11 @@
 
     <h3>Lazy Loading non-JS Bundles</h3>
     <p>
-      In cases when loading <code>.js</code> and <code>.mjs</code> is not enough
-      &mdash;most notably, when using HTML imports in Polymer-based apps&mdash;
-      the lazy loading feature can be implemented with a custom route action
-      (for more details see <a href="vaadin-router-route-actions-demos">Route
-      Actions</a>).
+      In cases when loading <code>.js</code> and <code>.mjs</code> is not
+      enough&mdash;most notably, when using HTML imports in Polymer-based
+      apps&mdash;the lazy loading feature can be implemented with a custom route
+      action (for more details see <a href="#vaadin-router-route-actions-demos">
+      Route Actions</a>).
     </p>
     <p>
       This demo shows a way to lazily add an HTML import. The <code>
