--- a/demo/vaadin-router-basic-demos.html
+++ b/demo/vaadin-router-basic-demos.html
@@ -28,13 +28,13 @@
       (a.k.a. the router <em>outlet</em>). By default, navigation events are
       triggered by <code>popstate</code> events on the <code>window</code>, and
       by <code>click</code> events on <code>&lt;a&gt;</code> elements on the
-      page (see <a href="vaadin-router-navigation-trigger-demos">Navigation
+      page (see <a href="#vaadin-router-navigation-trigger-demos">Navigation
       Triggers</a> for details).</p>
     <p>The routes config maps URL paths to Web Components. Vaadin.Router goes
       through the routes until it finds the first match, creates an instance
       of the route component, and inserts it into the router outlet (replacing
       any pre-existing outlet content). For details on the route path syntax
-      see the <a href="vaadin-router-route-parameters-demos">Router Parameters
+      see the <a href="#vaadin-router-route-parameters-demos">Router Parameters
       </a> demos.</p>
     <p>Route components can be any Web Components regardless of how they are
       built: vanilla JavaScript, Polymer, Stencil, SkateJS, Angular, Vue, etc</p>
@@ -63,8 +63,8 @@
       routes config can be expressed as a flat list, or as a parent-childern
       tree. The routes config in the example below is effectively the same as in
       the example above.</p>
-    <p>The leading <code>'/'</code> in child route paths is optional&mdash;they
-      are always relative to the path of the parent route.</p>
+    <p>The leading <code>'/'</code> in child route paths is optional &ndash;
+      they are always relative to the path of the parent route.</p>
     <vaadin-demo-snippet id="vaadin-router-basic-demo-2" iframe-src="iframe.html">
       <template preserve-content>
         <a href="/">Home</a>
