--- a/demo/vaadin-router-basic-demos.html
+++ b/demo/vaadin-router-basic-demos.html
@@ -63,8 +63,8 @@
       routes config can be expressed as a flat list, or as a parent-childern
       tree. The routes config in the example below is effectively the same as in
       the example above.</p>
-    <p>The leading <code>'/'</code> in child route paths is optional &ndash;
-      they are always relative to the path of the parent route.</p>
+    <p>The leading <code>'/'</code> in child route paths is optional&mdash;they
+      are always relative to the path of the parent route.</p>
     <vaadin-demo-snippet id="vaadin-router-basic-demo-2" iframe-src="iframe.html">
       <template preserve-content>
         <a href="/">Home</a>
