--- a/demo/vaadin-router-navigation-trigger-demos.html
+++ b/demo/vaadin-router-navigation-trigger-demos.html
@@ -148,7 +148,7 @@
     <h3>Unsubscribe from Navigation Events</h3>
     <p>
       Each Vaadin.Router instance is automatically subscribed to navigation
-      events upon creation. Sometimes it might be necessary to cacnel this
+      events upon creation. Sometimes it might be necessary to cancel this
       subscription so that the router would re-render only in response to the
       explicit <code>render()</code> method calls. Use the <code>unsubscribe()
       </code> method to cancel this automatic subscription and the <code>
